Window position not saving correctly for next start-up #34391

Closed
opened 2013-02-23 22:38:39 +01:00 by Timothy Powers · 13 comments

%%%--- Operating System, Graphics card ---
Windows 8 Pro 64bit
Geforce GTX 660Ti

- Blender version with error, and version that worked ---

All binaries downloaded from blender.org. No external builds used.
Verified works as expected for me in 2.65 r52859 (blender-2.65-release-windows64.zip) and 2.64a r51232 (blender-2.64a-release-windows64.zip)
Does not work in 2.66 r54697 (blender-2.66-windows64.zip)

- Short description of error ---

2.66 does not save/load the current monitor of full screen windows in start up file/user preferences.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In 2.65 or 2.64a. From factory settings. Shift+drag to create a new blender window. Move new window to second monitor and set to full screen (alt+f11). Save user settings (Ctrl+U). Close and re-open blender. Windows are in their same locations and in full screen mode if applicable on the correct monitor in multiple monitor setup.

With 2.66 starting from factory settings I create a new window by Shift+dragging and place that new window on a second monitor. If that window is not set to full screen I can save my start-up file and after closing/re-opening blender the windows are placed on their correct monitor.

Same process as before with 2.66, starting from factory settings create a new window and place it on monitor 2 but this time set it to full screen (Alt+f11). Save my start-up file and re-load blender. Any windows set to full screen are placed on what windows has set as the primary display. If I change the primary display in windows then blender positions any window set to full screen mode on that display when opened.
%%%

%%%--- Operating System, Graphics card --- Windows 8 Pro 64bit Geforce GTX 660Ti - Blender version with error, and version that worked --- All binaries downloaded from blender.org. No external builds used. Verified works as expected for me in 2.65 r52859 (blender-2.65-release-windows64.zip) and 2.64a r51232 (blender-2.64a-release-windows64.zip) Does not work in 2.66 r54697 (blender-2.66-windows64.zip) - Short description of error --- 2.66 does not save/load the current monitor of full screen windows in start up file/user preferences. - Steps for others to reproduce the error (preferably based on attached .blend file) --- In 2.65 or 2.64a. From factory settings. Shift+drag to create a new blender window. Move new window to second monitor and set to full screen (alt+f11). Save user settings (Ctrl+U). Close and re-open blender. Windows are in their same locations and in full screen mode if applicable on the correct monitor in multiple monitor setup. With 2.66 starting from factory settings I create a new window by Shift+dragging and place that new window on a second monitor. If that window is not set to full screen I can save my start-up file and after closing/re-opening blender the windows are placed on their correct monitor. Same process as before with 2.66, starting from factory settings create a new window and place it on monitor 2 but this time set it to full screen (Alt+f11). Save my start-up file and re-load blender. Any windows set to full screen are placed on what windows has set as the primary display. If I change the primary display in windows then blender positions any window set to full screen mode on that display when opened. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Also. If i configure my windows in full screen on multiple monitors in 2.65 and then copy the startup.blend file from "%appdata%\Blender Foundation\Blender\2.65\config" to "%appdata%\Blender Foundation\Blender\2.66\config" opening 2.66 will then place the windows on the correct display and in full screen mode.%%%

%%%Also. If i configure my windows in full screen on multiple monitors in 2.65 and then copy the startup.blend file from "%appdata%\Blender Foundation\Blender\2.65\config" to "%appdata%\Blender Foundation\Blender\2.66\config" opening 2.66 will then place the windows on the correct display and in full screen mode.%%%
Author

%%%After doing a little more research, I assume this is related to the workaround implemented in build 54220.%%%

%%%After doing a little more research, I assume this is related to the workaround implemented in build 54220.%%%

%%%Hi, I looked into this and the change and on Linux/X11 this works as expected (saving user defaults, fullscreen - reloads) in 2.66.

Checked r54220 and think its unlikely this caused the problem, though its possible changes I made in this area since 2.65 did cause the bug, those changes are to do with the size of the default window, not the case when userprefs are being loaded.

@Timothy, not sure we have any developers with multi-monitor on ms-windows8.
Could you test to find which revision broke? - or at least the latest known working revision?%%%

%%%Hi, I looked into this and the change and on Linux/X11 this works as expected (saving user defaults, fullscreen - reloads) in 2.66. Checked r54220 and think its unlikely this caused the problem, though its possible changes I made in this area since 2.65 did cause the bug, those changes are to do with the size of the default window, not the case when userprefs are being loaded. @Timothy, not sure we have any developers with multi-monitor on ms-windows8. Could you test to find which revision broke? - or at least the latest known working revision?%%%
Author

%%%Sorry, 54220 was the first SVN note i saw about window sizes on startup.

For now the most accurate I can get is it works in '2.65a release r53189 32 and 64 bit', but does not work in '2.66 release r54697 32 and 64 bit'.

On builder.blender.org I can find a link to download the most recent nightly build (r54815 right now). Googling for an archive of old nightlies turned up nothing. Is there somewhere the old nightly builds are archived where I can download builds between r53189 and r54697 to better narrow down where the behavior changed? %%%

%%%Sorry, 54220 was the first SVN note i saw about window sizes on startup. For now the most accurate I can get is it works in '2.65a release r53189 32 and 64 bit', but does not work in '2.66 release r54697 32 and 64 bit'. On builder.blender.org I can find a link to download the most recent nightly build (r54815 right now). Googling for an archive of old nightlies turned up nothing. Is there somewhere the old nightly builds are archived where I can download builds between r53189 and r54697 to better narrow down where the behavior changed? %%%

%%%I defenitely can say that generating a startupfile with r54219 works fine, even with newer/newest versions.
But generating a startupfile with r54230 or newer does not.
So the changed behaviour was triggered between r54219 and r54230 - two versions, I've fortunately stored.

Thanks for your effort !
Tom

Win7 x64, GTX580%%%

%%%I defenitely can say that generating a startupfile with r54219 works fine, even with newer/newest versions. But generating a startupfile with r54230 or newer does not. So the changed behaviour was triggered between r54219 and r54230 - two versions, I've fortunately stored. Thanks for your effort ! Tom Win7 x64, GTX580%%%

%%%I've just attached two startupfiles startup_54219 and starup_54876.
Startup_54219 was created (of course as "startup.blend") with r54219 as a dual monitor layout, then I copied this file from the 2.65/config folder to the 2.66/config folder and started Blender r54876: all looks fine.
But then I immediately saved (ctrl u) this layout again and after restart r54876 the dual monitor layout was broken. (Beside this, if you now toggle fullscreen with Alt F11 the window(s) disappeares.)

So, the difference in these two files may contain the hint to the fault !?

Hoping this helps
greetings
Tom%%%

%%%I've just attached two startupfiles startup_54219 and starup_54876. Startup_54219 was created (of course as "startup.blend") with r54219 as a dual monitor layout, then I copied this file from the 2.65/config folder to the 2.66/config folder and started Blender r54876: all looks fine. But then I immediately saved (ctrl u) this layout again and after restart r54876 the dual monitor layout was broken. (Beside this, if you now toggle fullscreen with Alt F11 the window(s) disappeares.) So, the difference in these two files may contain the hint to the fault !? Hoping this helps greetings Tom%%%

%%%Tried again to attach the files ...%%%

%%%Tried again to attach the files ...%%%

%%%Hi Tom, error from my commit r54226.

Managed to use windows in VirtualBox to debug this.
fixed r54879.%%%

%%%Hi Tom, error from my commit r54226. Managed to use windows in VirtualBox to debug this. fixed r54879.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%That did the trick. Works perfectly for me now.

Thank you very much for fixing this Mr. Barton.%%%

%%%That did the trick. Works perfectly for me now. Thank you very much for fixing this Mr. Barton.%%%

%%%It is a shame that Blender cannot accept negative screen coordinates in the shortcut, like 2.4x. For example, I have a 1280x1024 monitor placed on the left of my primary 1680x1050 monitor (with their tops aligned). So, I need to use 'blender.exe -w -p -1280 1024 2960 980' to make Blender start on the left side of my left monitor and spread right across all the way to the right side of my primary monitor. This worked perfectly in 2.4x, but in 2.5x / 2.6x the negative x coordinate (-1280) is ignored, and Blender just starts on my primary monitor only (although the height is correct). So each time I open Blender I have to drag the left side of the Blender window over onto my left monitor! Is there any chance you could fix this and make it work like 2.4x did?%%%

%%%It is a shame that Blender cannot accept negative screen coordinates in the shortcut, like 2.4x. For example, I have a 1280x1024 monitor placed on the left of my primary 1680x1050 monitor (with their tops aligned). So, I need to use 'blender.exe -w -p -1280 1024 2960 980' to make Blender start on the left side of my left monitor and spread right across all the way to the right side of my primary monitor. This worked perfectly in 2.4x, but in 2.5x / 2.6x the negative x coordinate (-1280) is ignored, and Blender just starts on my primary monitor only (although the height is correct). So each time I open Blender I have to drag the left side of the Blender window over onto my left monitor! Is there any chance you could fix this and make it work like 2.4x did?%%%

%%%@nick-14 Adams, this could be supported again, would need to investigate if this was intentionally disabled for a reason.
best report a separate bug.%%%

%%%@nick-14 Adams, this could be supported again, would need to investigate if this was intentionally disabled for a reason. best report a separate bug.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34391
No description provided.