fix for own regression in win32 from r54225, wrong args used in getAllDisplayDimensions() caused bug [#34391] Window position not saving correctly for next start-up